--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/RTClib@^2.1.4
+lib_deps = 
+	adafruit/RTClib@^2.1.4
+	adafruit/Adafruit SHT31 Library@^2.2.2
